--- a/TVBProcessing.qmd
+++ b/TVBProcessing.qmd
@@ -1,6 +1,9 @@
 ---
 title: "Data Processing for TVB"
-author: "Leon Martin"
+author:
+  - name: Leon Martin
+    email: leon.martin@bih-charite.de
+    affiliations: Berlin Institute of Health at Charité University Medicine Berlin
 bibliography: references.bib
 references:
   citeproc: true
@@ -8,88 +11,88 @@ references:
   csl: apa.csl
 format:
   revealjs:
+    mermaid:
+      theme: neutral
+    theme: [default, clean.scss]
     toc: true
+    toc-depth: 2
+    toc-expand: true
     auto-stretch: false
     incremental: false
     footer: "© Leon Martin 2024"
-    css: styles.css
-
+execute:
+  cache: true
 ---
 
 # Introduction
 
-## MR Physics - Overview
-::: {layout="[[-1], [1], [-1]]"}
-![](images/MRPhysics-Overview.svg){fig-align="center"}
+{{< include slides/Theory/MR_Physics/Overview.qmd >}}
+
+
+## Main Challenges {.r-fit-text}
+
+:::: {.columns}
+:::{.column width=50% .r-fit-text .smaller}
+**Goal of neuroimaging**: Elucidate brain function in relation to its multiple layers of organization that operate at different spatial and temporal scales
+
+:::{.callout-warning}
+1. Challenging integration across spatiotemporal scales [@Akil2011]
+2. Limited reproducibility of imaging studies [@BotvinikNezer2020]
+3. Reproducible brain imaging studies require huge sample sizes [@Marek2022]
 :::
 
-
-## Main Challenges
-- Elucidate brain function in relation to its multiple layers of organization that operate at different spatial and temporal scales
-- Reproducibility Crisis
-  - 10 Different Labs --> 10 different results
-
-::: {.citations}
-[@Akil2011; @BotvinikNezer2020]
+↳ Brain network models help understanding multi-scale brain dynamics by integrating individual **structural** and **functional** data with neural population models [@Schirner2018].
 :::
-
-## Analytical Variability in fMRI Data Interpretation
-
-:::: {layout="[ 65, 35 ]"}
-
-::: {#first-column }
-
-<div class=column65>
-  - 70 independent teams analized the same fMRI dataset.
-  - Every team chose a unique workflow to analyze the data.
-  - Variying results of hypothesis tests.
-  - Choice of analysis pipeline has substantial effects on scientific conclusions
-  - Need for validation and sharing of complex image processing workflows.
-</div>
-
+:::{.column width=50% style="margin-top: 0px;  margin-bottom: 0px; font-size: 0.6em;"}
+![](https://iiif.elifesciences.org/lax/28927%2Felife-28927-fig1-v2.tif/full/1500,/0/default.jpg)
+![](https://iiif.elifesciences.org/lax/28927%2Felife-28927-fig2-v2.tif/full/1500,/0/default.jpg)
 :::
-
-::: {#second-column}
-![](https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41586-020-2314-9/MediaObjects/41586_2020_2314_Fig2_HTML.png?as=webp)
-:::
-
 ::::
 
 ::: {.citations}
-[@BotvinikNezer2020]
+[@Schirner2018]
 :::
 
 ::: {.notes}
-*Figure2*: Investigates statistical variability across 64 different research teams.
+- **Figure1**
+  - Construction: Derived from diffusion-weighted MRI tractography and anatomical MRI region parcellations.
+  - Node Injection: Nodes receive subject-specific EEG source activity time series instead of noise.
+  - fMRI Prediction: Predicted fMRI time series are matched to each subject’s empirical fMRI data, acquired simultaneously with EEG.
+  - Network Structure:
+    - Local Networks: Comprise excitatory (E) and inhibitory (I) neural population models driven by EEG source activity (red arrows).
+    - Global Coupling: Nodes are connected by structural connectomes (green arrows), representing white matter coupling strengths.
+  - Analysis:
+    - Synaptic Input Currents (Equations 1 and 2)
+    - Firing Rates (Equations 3 and 4)
+    - Synaptic Activity (Equations 5 and 6)
+  - Purpose: To relate neural population activity and network interactions to observable neuroimaging signals.
+  - Visualization: See Video 1 for a brain network model construction and simulation results.
 
-**Part A:**
-
-- Spearman correlations calculated between team's whole-brain maps.
-- Maps clustered based on similarity (Ward clustering on Euclidean distances).
-Color coding:
-- Row colors indicate cluster membership (Purple for Cluster 1, Blue for Cluster 2, Grey for Cluster 3).
-- Column colors represent hypothesis decisions (Green for "yes", Red for "no").
-
-**Part B:**
-
-- Shows average statistical maps for each cluster, thresholded at uncorrected z > 2.0.
-- Displays probability of reporting a positive outcome (P_yes) for each cluster.
-- Notes: Maps for Hypothesis 1 and 3 are identical, only differing in the brain regions analyzed.
-
-**Key Takeaway:**
-
-- Highlights significant variability in data interpretation among different research teams.
-- Emphasizes the need for standardized methods in neuroimaging analysis.
--
+- **Figure2**
+  a) Neuron firing decreases during peaks of α-waves and increases during troughs (Haegens et al., 2011).
+  b) Simulations show an inverse relationship between neuron firing and α-phase due to neural excitation and inhibition balance (Atallah and Scanziani, 2009).
+  c) On a longer timescale (<0.25 Hz), firing rates oscillate inversely to α-band power (Haegens et al., 2011).
+  d) Model simulations link α-band power oscillations to fMRI oscillations, predicting resting-state fMRI time series and spatial patterns (de Munck et al., 2008).
+  e) Scale-free fMRI power spectra emerge from long-range network input (He, 2011).
+  f) Functional connectivity matrices were predicted over varying time windows (Allen et al., 2014).
 :::
 
+{{< include slides/Theory/Reproducibility/BotvinikNezer2020.qmd >}}
 
-## Building Blocks of a Brain Network Model
-![](images/BNM_overview.png)
+
+{{< include slides/Theory/BrainNetworks/ConceptsAndTerminology.qmd >}}
+
+## Brain Simulation
+
+{{< include slides/Theory/BrainNetworks/BNM.qmd >}}
+
 
 ::: {.citations}
 [@Martin2024]
 :::
+
+## Empirical data features
+{{< include slides/Theory/BrainNetworks/Connectomes.qmd >}}
 
 ## From data to knowledge
 ![](images/Data-Knowledge-Arrow.svg){width="auto" height="200"}
@@ -98,33 +101,19 @@ Color coding:
 [@Schirner2015]
 :::
 
+
 # Methods
-
-## Data Flow
-```{dot}
-//| label: ProcessingDataFlow
-//| file: DataFlow.dot
-```
-
-## Processing Pipeline
-```{=html}
-<div style="display: flex;">
-    <div style="flex: 1;">
-        <ul>
-            <li>bullet</li>
-            <li>bullet</li>
-        </ul>
-    </div>
-    <div style="flex: 1;">
-        <img src="https://ars.els-cdn.com/content/image/1-s2.0-S1053811915002505-gr1.jpg" style="width: 100%;">
-    </div>
-</div>
-```
+{{< include slides/Methods/MinimalPreprocessing/Overview.qmd >}}
 
 
 ::: {.citations}
 [@Schirner2015]
 :::
+
+## Structural Processing
+
+{{< include slides/Methods/MinimalPreprocessing/HCP.qmd >}}
+
 
 ## EEG
 ![](images/Zorzos2021_Fig1.webp)
@@ -138,5 +127,11 @@ Color coding:
 
 
 ## Automated and scaleable processing pipelines
+{{< include slides/Methods/Snakemake/Overview.qmd >}}
+
+{{< include slides/Methods/Snakemake/Rules.qmd >}}
+
+{{< include slides/Methods/Snakemake/Workflows.qmd >}}
+
 
 # References
