chore: Update utils.py with data loading and graph creation functions

--- a/references.bib
+++ b/references.bib
@@ -9,9 +9,59 @@
   pages     = {708--712},
   volume    = {331},
   doi       = {10.1126/science.1199305},
+  file      = {:Akil2011 - Challenges and Opportunities in Mining Neuroscience Data.pdf:PDF},
   groups    = {Reproducibility and data-sharing in Neuroscience},
   priority  = {prio1},
   publisher = {American Association for the Advancement of Science (AAAS)},
+}
+
+@Article{Koller2024,
+  author    = {Dominik P. Koller and Michael Schirner and Petra Ritter},
+  journal   = {Nature Communications},
+  title     = {Human connectome topology directs cortical traveling waves and shapes frequency gradients},
+  year      = {2024},
+  issn      = {2041-1723},
+  month     = apr,
+  number    = {1},
+  volume    = {15},
+  abstract  = {Nature Communications, doi:10.1038/s41467-024-47860-x},
+  doi       = {10.1038/s41467-024-47860-x},
+  file      = {:Koller2024 - Human Connectome Topology Directs Cortical Traveling Waves and Shapes Frequency Gradients.pdf:PDF},
+  groups    = {LiteratureDB, HighImpactModelingStudies},
+  publisher = {Springer US},
+}
+
+@Article{Schirner2018,
+  author    = {Schirner, Michael and McIntosh, Anthony Randal and Jirsa, Viktor and Deco, Gustavo and Ritter, Petra},
+  journal   = {eLife},
+  title     = {Inferring multi-scale neural mechanisms with brain network modelling},
+  year      = {2018},
+  issn      = {2050-084X},
+  month     = jan,
+  pages     = {e28927},
+  volume    = {7},
+  doi       = {10.7554/elife.28927},
+  file      = {:Schirner2018 - Inferring Multi Scale Neural Mechanisms with Brain Network Modelling.pdf:PDF},
+  groups    = {HighImpactModelingStudies},
+  publisher = {eLife Sciences Publications, Ltd},
+}
+
+@Article{Sporns2013,
+  author    = {Sporns, Olaf},
+  journal   = {Nature Methods},
+  title     = {Making sense of brain network data},
+  year      = {2013},
+  issn      = {1548-7105},
+  month     = may,
+  number    = {6},
+  pages     = {491--493},
+  volume    = {10},
+  abstract  = {Nature Methods 10, 491 (2013). doi:10.1038/nmeth.2485},
+  doi       = {10.1038/nmeth.2485},
+  file      = {:Sporns2013 - Making Sense of Brain Network Data.pdf:PDF},
+  groups    = {HighImpactModelingStudies},
+  publisher = {Springer Science and Business Media LLC},
+  rights    = {Â© 2013 Nature Publishing Group},
 }
 
 @Article{Schirner2015,
@@ -24,6 +74,7 @@
   pages     = {343--357},
   volume    = {117},
   doi       = {10.1016/j.neuroimage.2015.03.055},
+  file      = {:Schirner2015 - An Automated Pipeline for Constructing Personalized Virtual Brains from Multimodal Neuroimaging Data.pdf:PDF},
   groups    = {MRI Processing},
   publisher = {Elsevier BV},
 }
@@ -39,6 +90,7 @@
   pages     = {378--391},
   volume    = {2},
   doi       = {10.3390/signals2030024},
+  file      = {:Zorzos2021 - Advances in Electrical Source Imaging_ a Review of the Current Approaches, Applications and Challenges.pdf:PDF;:Zorzos2021 - Advances in Electrical Source Imaging_ a Review of the Current Approaches, Applications and Challenges.pdf:},
   groups    = {EEG},
   publisher = {MDPI AG},
 }
@@ -48,6 +100,22 @@
   note   = {In preparation},
   title  = {Semantic Annotation of Computational Neuroscience Knowledge: The Virtual Brain Ontology for Reproducible Whole-Brain Models},
   year   = {2024},
+}
+
+@Article{Marek2022,
+  author    = {Marek, Scott and Tervo-Clemmens, Brenden and Calabro, Finnegan J. and Montez, David F. and Kay, Benjamin P. and Hatoum, Alexander S. and Donohue, Meghan Rose and Foran, William and Miller, Ryland L. and Hendrickson, Timothy J. and Malone, Stephen M. and Kandala, Sridhar and Feczko, Eric and Miranda-Dominguez, Oscar and Graham, Alice M. and Earl, Eric A. and Perrone, Anders J. and Cordova, Michaela and Doyle, Olivia and Moore, Lucille A. and Conan, Gregory M. and Uriarte, Johnny and Snider, Kathy and Lynch, Benjamin J. and Wilgenbusch, James C. and Pengo, Thomas and Tam, Angela and Chen, Jianzhong and Newbold, Dillan J. and Zheng, Annie and Seider, Nicole A. and Van, Andrew N. and Metoki, Athanasia and Chauvin, Roselyne J. and Laumann, Timothy O. and Greene, Deanna J. and Petersen, Steven E. and Garavan, Hugh and Thompson, Wesley K. and Nichols, Thomas E. and Yeo, B. T. Thomas and Barch, Deanna M. and Luna, Beatriz and Fair, Damien A. and Dosenbach, Nico U. F.},
+  journal   = {Nature},
+  title     = {Reproducible brain-wide association studies require thousands of individuals},
+  year      = {2022},
+  issn      = {1476-4687},
+  month     = mar,
+  number    = {7902},
+  pages     = {654--660},
+  volume    = {603},
+  doi       = {10.1038/s41586-022-04492-9},
+  file      = {:Marek2022 - Reproducible Brain Wide Association Studies Require Thousands of Individuals.pdf:PDF:https\://www.nature.com/articles/s41586-022-04492-9.pdf},
+  groups    = {Reproducibility and data-sharing in Neuroscience},
+  publisher = {Springer Science and Business Media LLC},
 }
 
 @Article{BotvinikNezer2020,
@@ -61,8 +129,77 @@
   pages     = {84--88},
   volume    = {582},
   doi       = {10.1038/s41586-020-2314-9},
+  file      = {:BotvinikNezer2020 - Variability in the Analysis of a Single Neuroimaging Dataset by Many Teams.pdf:PDF},
   groups    = {Reproducibility and data-sharing in Neuroscience},
   publisher = {Springer Science and Business Media LLC},
 }
 
+@Book{Schild1992,
+  author    = {Schild, H.H.},
+  publisher = {Berlex Laboratories},
+  title     = {MRI Made Easy (... Well Almost)},
+  year      = {1992},
+  url       = {https://books.google.de/books?id=mG5rAAAAMAAJ},
+}
+
+@Article{Lindquist2020,
+  author    = {Lindquist, Martin},
+  journal   = {Nature},
+  title     = {Neuroimaging results altered by varying analysis pipelines},
+  year      = {2020},
+  issn      = {1476-4687},
+  month     = may,
+  number    = {7810},
+  pages     = {36--37},
+  volume    = {582},
+  doi       = {10.1038/d41586-020-01282-z},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{Glasser2013,
+  author    = {Glasser, Matthew F. and Sotiropoulos, Stamatios N. and Wilson, J. Anthony and Coalson, Timothy S. and Fischl, Bruce and Andersson, Jesper L. and Xu, Junqian and Jbabdi, Saad and Webster, Matthew and Polimeni, Jonathan R. and Van Essen, David C. and Jenkinson, Mark},
+  journal   = {NeuroImage},
+  title     = {The minimal preprocessing pipelines for the Human Connectome Project},
+  year      = {2013},
+  issn      = {1053-8119},
+  month     = oct,
+  pages     = {105--124},
+  volume    = {80},
+  doi       = {10.1016/j.neuroimage.2013.04.127},
+  publisher = {Elsevier BV},
+}
+
+@Article{Glasser2016,
+  author    = {Glasser, Matthew F. and Coalson, Timothy S. and Robinson, Emma C. and Hacker, Carl D. and Harwell, John and Yacoub, Essa and Ugurbil, Kamil and Andersson, Jesper and Beckmann, Christian F. and Jenkinson, Mark and Smith, Stephen M. and Van Essen, David C.},
+  journal   = {Nature},
+  title     = {A multi-modal parcellation of human cerebral cortex},
+  year      = {2016},
+  issn      = {1476-4687},
+  month     = jul,
+  number    = {7615},
+  pages     = {171--178},
+  volume    = {536},
+  doi       = {10.1038/nature18933},
+  publisher = {Springer Science and Business Media LLC},
+}
+
+@Article{Sporns2014,
+  author    = {Sporns, Olaf},
+  journal   = {Nature Neuroscience},
+  title     = {Contributions and challenges for network models in cognitive neuroscience},
+  year      = {2014},
+  issn      = {1546-1726},
+  month     = mar,
+  number    = {5},
+  pages     = {652--660},
+  volume    = {17},
+  doi       = {10.1038/nn.3690},
+  file      = {:Sporns2014 - Contributions and Challenges for Network Models in Cognitive Neuroscience.pdf:PDF:https\://www.nature.com/articles/nn.3690.pdf},
+  publisher = {Springer Science and Business Media LLC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
+
+@Comment{jabref-meta: fileDirectory:/Users/leonmartin_bih/Library/Mobile Documents/com~apple~CloudDocs/Literature;}
+
+@Comment{jabref-meta: fileDirectory-leonmartin_bih-bronkobook-work2.local:/Users/leonmartin_bih/Library/Mobile Documents/com~apple~CloudDocs/Literature;}
