--- a/references.bib
+++ b/references.bib
@@ -198,6 +198,22 @@
   publisher = {Springer Science and Business Media LLC},
 }
 
+@Article{Deco2018,
+  author    = {Deco, Gustavo and Cruzat, Josephine and Cabral, Joana and Knudsen, Gitte M. and Carhart-Harris, Robin L. and Whybrow, Peter C. and Logothetis, Nikos K. and Kringelbach, Morten L.},
+  journal   = {Current Biology},
+  title     = {Whole-Brain Multimodal Neuroimaging Model Using Serotonin Receptor Maps Explains Non-linear Functional Effects of LSD},
+  year      = {2018},
+  issn      = {0960-9822},
+  month     = oct,
+  number    = {19},
+  pages     = {3065--3074.e6},
+  volume    = {28},
+  doi       = {10.1016/j.cub.2018.07.083},
+  file      = {:Deco2018 - Whole Brain Multimodal Neuroimaging Model Using Serotonin Receptor Maps Explains Non Linear Functional Effects of LSD.pdf:PDF},
+  groups    = {HighImpactModelingStudies},
+  publisher = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: fileDirectory:/Users/leonmartin_bih/Library/Mobile Documents/com~apple~CloudDocs/Literature;}
