--- a/references.bib
+++ b/references.bib
@@ -75,7 +75,7 @@
   volume    = {117},
   doi       = {10.1016/j.neuroimage.2015.03.055},
   file      = {:Schirner2015 - An Automated Pipeline for Constructing Personalized Virtual Brains from Multimodal Neuroimaging Data.pdf:PDF},
-  groups    = {MRI Processing},
+  groups    = {Data Preprocessing, MRI},
   publisher = {Elsevier BV},
 }
 
@@ -198,19 +198,17 @@
   publisher = {Springer Science and Business Media LLC},
 }
 
-@Article{Deco2018,
-  author    = {Deco, Gustavo and Cruzat, Josephine and Cabral, Joana and Knudsen, Gitte M. and Carhart-Harris, Robin L. and Whybrow, Peter C. and Logothetis, Nikos K. and Kringelbach, Morten L.},
-  journal   = {Current Biology},
-  title     = {Whole-Brain Multimodal Neuroimaging Model Using Serotonin Receptor Maps Explains Non-linear Functional Effects of LSD},
-  year      = {2018},
-  issn      = {0960-9822},
-  month     = oct,
-  number    = {19},
-  pages     = {3065--3074.e6},
-  volume    = {28},
-  doi       = {10.1016/j.cub.2018.07.083},
-  file      = {:Deco2018 - Whole Brain Multimodal Neuroimaging Model Using Serotonin Receptor Maps Explains Non Linear Functional Effects of LSD.pdf:PDF},
-  groups    = {HighImpactModelingStudies},
+@Article{SanzLeon2015,
+  author    = {Sanz-Leon, Paula and Knock, Stuart A. and Spiegler, Andreas and Jirsa, Viktor K.},
+  journal   = {NeuroImage},
+  title     = {Mathematical framework for large-scale brain network modeling in The Virtual Brain},
+  year      = {2015},
+  issn      = {1053-8119},
+  month     = may,
+  pages     = {385--430},
+  volume    = {111},
+  doi       = {10.1016/j.neuroimage.2015.01.002},
+  file      = {:SanzLeon2015 - Mathematical Framework for Large Scale Brain Network Modeling in the Virtual Brain.pdf:PDF},
   publisher = {Elsevier BV},
 }
 
