--- a/references.bib
+++ b/references.bib
@@ -212,6 +212,35 @@
   publisher = {Elsevier BV},
 }
 
+@Article{Desikan2006,
+  author    = {Desikan, Rahul S. and Ségonne, Florent and Fischl, Bruce and Quinn, Brian T. and Dickerson, Bradford C. and Blacker, Deborah and Buckner, Randy L. and Dale, Anders M. and Maguire, R. Paul and Hyman, Bradley T. and Albert, Marilyn S. and Killiany, Ronald J.},
+  journal   = {NeuroImage},
+  title     = {An automated labeling system for subdividing the human cerebral cortex on MRI scans into gyral based regions of interest},
+  year      = {2006},
+  issn      = {1053-8119},
+  month     = jul,
+  number    = {3},
+  pages     = {968--980},
+  volume    = {31},
+  doi       = {10.1016/j.neuroimage.2006.01.021},
+  groups    = {MRI},
+  publisher = {Elsevier BV},
+}
+
+@Article{Fischl2002,
+  author    = {Fischl, Bruce and Salat, David H. and Busa, Evelina and Albert, Marilyn and Dieterich, Megan and Haselgrove, Christian and van der Kouwe, Andre and Killiany, Ron and Kennedy, David and Klaveness, Shuna and Montillo, Albert and Makris, Nikos and Rosen, Bruce and Dale, Anders M.},
+  journal   = {Neuron},
+  title     = {Whole Brain Segmentation},
+  year      = {2002},
+  issn      = {0896-6273},
+  month     = jan,
+  number    = {3},
+  pages     = {341--355},
+  volume    = {33},
+  doi       = {10.1016/s0896-6273(02)00569-x},
+  publisher = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: fileDirectory:/Users/leonmartin_bih/Library/Mobile Documents/com~apple~CloudDocs/Literature;}
