--- a/index.qmd
+++ b/index.qmd
@@ -50,23 +50,20 @@ execute:
 {{< include slides/Theory/MR_Physics/Overview.qmd >}}
 
 ##
+<!-- MR Basics -->
 ![](slides/Theory/FallSchool21%20-%20MRbasics_LM.gif){height=800px, width=auto}
 
 {{< include slides/Theory/Reproducibility/BotvinikNezer2020.qmd >}}
 
 {{< include slides/Theory/BrainNetworks/ConceptsAndTerminology.qmd >}}
 
-
-
 {{< include slides/Theory/BrainNetworks/BNM.qmd >}}
-
 
 ## Empirical data features
 {{< include slides/Theory/BrainNetworks/Connectomes.qmd >}}
 
 ## Empirical data features
 {{< include slides/Theory/BrainNetworks/EEG.qmd >}}
-
 
 <!-- Methods -->
 {{< include slides/Methods/MinimalPreprocessing/Overview.qmd >}}
@@ -76,33 +73,7 @@ execute:
 
 {{< include slides/Methods/MinimalPreprocessing/HCP.qmd >}}
 
-
-## Local and Global Connectivity
-![](images/Global_Local_Connectivity.svg){width=700px fig-align="center"}
-
-::: {.citations}
-[@SanzLeon2015]
-:::
-
-::: {.notes}
-**Spatial Scales of Structural Connectivity**
-
-- **Human Cortex Representation**
-  - Depicted as a triangular mesh (lower panel).
-
-- **Local Connections**
-  - Represented with a kernel function, $W_{\xi}(z)$, of the exponential family.
-  - Associated with intracortical fibers.
-
-- **Anatomical Parcellation**
-  - Cortex divided into a finite number of patches (upper right).
-
-- **Connectome**
-  - Connections between parcels represented as Uv = 2.
-
-- **Time-Delays**
-  - Introduced via long-range connections {$u_{jk}$, $\tau_{jk}$}.
-:::
+{{< include slides/Theory/BrainNetworks/LocalGloballConnectivity.qmd >}}
 
 <!-- Workflows -->
 {{< include slides/Methods/Snakemake/Overview.qmd >}}
