--- a/references.bib
+++ b/references.bib
@@ -46,6 +46,22 @@
   publisher = {eLife Sciences Publications, Ltd},
 }
 
+@Article{Schirner2023,
+  author    = {Schirner, Michael and Deco, Gustavo and Ritter, Petra},
+  journal   = {Nature Communications},
+  title     = {Learning how network structure shapes decision-making for bio-inspired computing},
+  year      = {2023},
+  issn      = {2041-1723},
+  month     = may,
+  number    = {1},
+  volume    = {14},
+  abstract  = {Nature Communications, doi:10.1038/s41467-023-38626-y},
+  doi       = {10.1038/s41467-023-38626-y},
+  file      = {:Schirner2023 - Learning How Network Structure Shapes Decision Making for Bio Inspired Computing.pdf:PDF},
+  groups    = {LiteratureDB, HighImpactModelingStudies},
+  publisher = {Springer Science and Business Media LLC},
+}
+
 @Article{Sporns2013,
   author    = {Sporns, Olaf},
   journal   = {Nature Methods},
@@ -62,6 +78,19 @@
   groups    = {HighImpactModelingStudies},
   publisher = {Springer Science and Business Media LLC},
   rights    = {Â© 2013 Nature Publishing Group},
+}
+
+@Article{Wang2022,
+  author    = {Wang, Huifang E and Woodman, Marmaduke and Triebkorn, Paul and Lemarechal, Jean-Didier and Jha, Jayant and Dollomaja, Borana and Vattikonda, Anirudh Nihalani and Sip, Viktor and Villalon, Samuel Medina and Hashemi, Meysam and Guye, Maxime and Scholly, Julia and Bartolomei, Fabrice and Jirsa, Viktor},
+  journal   = {medRxiv},
+  title     = {Virtual Epileptic Patient (VEP): Data-driven probabilistic personalized brain modeling in drug-resistant epilepsy},
+  year      = {2022},
+  month     = jan,
+  pages     = {2022--01},
+  doi       = {10.1101/2022.01.19.22269404},
+  file      = {:Wang2022 - Virtual Epileptic Patient (VEP)_ Data Driven Probabilistic Personalized Brain Modeling in Drug Resistant Epilepsy.pdf:PDF},
+  groups    = {HighImpactModelingStudies},
+  publisher = {Cold Spring Harbor Laboratory},
 }
 
 @Article{Schirner2015,
@@ -255,6 +284,21 @@
   volume    = {33},
   doi       = {10.1016/s0896-6273(02)00569-x},
   publisher = {Elsevier BV},
+}
+
+@Article{CabreraAlvarez2024,
+  author    = {Cabrera-Álvarez, Jesús and Stefanovski, Leon and Martin, Leon and Susi, Gianluca and Maestú, Fernando and Ritter, Petra},
+  journal   = {eneuro},
+  title     = {A Multiscale Closed-Loop Neurotoxicity Model of Alzheimer’s Disease Progression Explains Functional Connectivity Alterations},
+  year      = {2024},
+  issn      = {2373-2822},
+  month     = apr,
+  number    = {4},
+  pages     = {ENEURO.0345--23.2023},
+  volume    = {11},
+  doi       = {10.1523/eneuro.0345-23.2023},
+  file      = {:CabreraAlvarez2024 - A Multiscale Closed Loop Neurotoxicity Model of Alzheimer’s Disease Progression Explains Functional Connectivity Alterations.pdf:PDF:https\://pdfs.semanticscholar.org/a6b3/36512d04623f86c03c2cd4b2e7f03eab37fb.pdf},
+  publisher = {Society for Neuroscience},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
