chore: Add BIDS Extension Computational Modeling (BEP034) to Methods slides

--- a/slides/Methods/BIDS.qmd
+++ b/slides/Methods/BIDS.qmd
@@ -32,3 +32,7 @@
 - iEEG (Intracranial Electroencephalography)
 - PET (Positron Emission Tomography)
 :::
+
+
+
+## BIDS Extension Computational Modeling (BEP034)
