chore: Update margin-bottom property in index.html layout panel and update workshop

--- a/index.qmd
+++ b/index.qmd
@@ -33,6 +33,7 @@ format:
     footer: "© Leon Martin 2024"
     show-notes: false
     auto-play-media: true
+  pdf: default
 execute:
   cache: true
 ---
