--- a/index.qmd
+++ b/index.qmd
@@ -33,6 +33,7 @@ format:
     footer: "© Leon Martin 2024"
     show-notes: false
     auto-play-media: true
+    pdf-max-pages-per-slide: 1
   pdf: default
 execute:
   cache: true
